@@ -1,0 +1,24 @@
+#!/bin/bash
+
+set -e
+
+SCRIPT=$(readlink -f "$0")
+EXEPATH=$(dirname "$SCRIPT")
+
+
+e-reset
+
+cd $EXEPATH/bin; ./main.elf 0 0 4 4 0x12345678
+
+#> dotproduct.log
+
+retval=$?
+
+if [ $retval -ne 0 ]
+then
+    echo "$SCRIPT FAILED"
+else
+    echo "$SCRIPT PASSED"
+fi
+
+exit $retval
