@@ -1,3 +1,11 @@
+2015-05-22  Ola Jeppsson  <ola@adapteva.com>
+
+	* test/e-free-resource-leak-test/build.sh: New file
+	* test/e-free-resource-leak-test/run.sh: New file
+	* test/e-free-resource-leak-test/src/main.c: New file.
+	Regression test for epiphany-libs commit:
+	"be28d22caf3e09aa5813ec3a946279af2ee5191c"
+
 2015-04-07  Ola Jeppsson  <ola@adapteva.com>
 
 	* scripts/build_and_test_all.sh: Fix typo
